--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Malte Schwarzkopf <malte@csail.mit.edu>"]
 
 [dependencies]
 clap = "2.24.0"
-distributary = { git = "https://github.com/mit-pdos/distributary" }
+distributary = { git = "https://github.com/mit-pdos/distributary", branch = "distributed-soup2" }
 nom_sql = { git = "https://github.com/ms705/nom-sql.git", rev = "90c9415691d196d1b281cdf6ca02060ed238afbe" }
 rustyline = "1.0"
 slog = "2.0.2"
